Fix 'Python Import Classes does not import Attributes'.

BUG:158739