test/import/python/class.py
@@ -1,0 +1,45 @@
+# coding=UTF-8
+from object import *
+
+# class doc
+class new_class (object):
+  """private_bool_false documentation
+  """
+  __private_bool_false=False
+  # private_bool_true documentation
+  __private_bool_true=True
+  __private_int=3
+  __private_float=3.0
+  __private_string="1234"
+  __private_list=[]
+  __private_dict={}
+  _protected_bool_false=False
+  _protected_bool_true=True
+  _protected_int=3
+  _protected_float=3.0
+  _protected_string="1234"
+  _protected_list=[]
+  _protected_dict={}
+  public_bool_false=False
+  public_bool_true=True
+  public_int=3
+  public_float=3.0
+  public_string="1234"
+  public_list=[]
+  public_dict={}
+
+  # public method doc
+  def public(self):
+      pass
+
+  # protected method doc
+  def _protected(self):
+      pass
+
+  # private method doc
+  def __private(self):
+      pass
+
+
+
+
