test/import/python/types.py
@@ -1,0 +1,10 @@
+# coding=UTF-8
+
+class Types():
+  bool_false=False
+  bool_true=True
+  int=3
+  float=3.0
+  string="1234"
+  list=[]
+  dict={}
